<resources>
    <string name="app_name">GestorAlpha</string>
    <string name="nombre">Correo electrónico</string>
    <string name="nombreHint">Introduce el correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password2">Repite la contraseña</string>
    <string name="passwordCambiar">Cambiar contrasenna</string>
    <string name="passwordHint">Introduce la contraseña</string>
    <string name="textoPassword">Actualiza la contraseña</string>
    <string name="antiguaPassword">Mete la antigua contraseña</string>
    <string name="nuevaPassword">Mete la nueva contraseña</string>
    <string name="volver">Volver</string>
    <string name="crearUsuario">Crear usuario</string>
    <string name="loguear">Loguear</string>
    <string name="gastos">Gastos del mes</string>
    <string name="cambiar">Cambiar a</string>
    <string name="año">Rojo</string>
    <string name="mes1">Enero</string>
    <string name="mes2">Febrero</string>
    <string name="mes3">Marzo</string>
    <string name="mes4">Abril</string>
    <string name="mes5">Mayo</string>
    <string name="mes6">Junio</string>
    <string name="mes7">Julio</string>
    <string name="mes8">Agosto</string>
    <string name="mes9">Septiembre</string>
    <string name="mes10">Octubre</string>
    <string name="mes11">Noviembre</string>
    <string name="mes12">Diciembre</string>
    <string name="VisualizarGastos">Visualizar datos</string>
    <string name="AñadirGastos">Añadir gastos</string>
    <string name="Añadir">Añadir</string>
    <string name="Cambiar">Cambiar</string>
    <string name="CantidadGastada">Cantidad gastada</string>
    <string name="DetallesDelGasto">Detalles del gasto</string>
    <string name="ConceptoDelGasto">Concepto del gasto</string>
    <string name="ConceptoDelGasto1">Alimentos</string>
    <string name="ConceptoDelGasto2">Casa</string>
    <string name="ConceptoDelGasto3">Ocios</string>
    <string name="CantidadAnnadir">Introduce cantidad</string>
    <string name="UsuarioYaRegistrado">Ese usuario ya esta registrado</string>
    <string name="FaltanCampos">Faltan campos por rellenar</string>
    <string name="CamposConEspacios">No pueden haber espacios en el nombre o la contraseña</string>
    <string name="NuevoUsuario">Inserta los datos del nuevo usuario</string>
    <string name="Modificar">Modificar</string>
    <string name="Borrar">Borrar</string>
    <string name="FechaM">¿Poner fecha de manera manual?</string>
    <string name="Activar">Activar</string>
</resources>