<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VisualiceActivity">

    <TextView
        android:id="@+id/textViewNuevaFecha5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="548dp"
        android:text="@string/cambiar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listaGastos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textViewGastos" />

    <Spinner
        android:id="@+id/opcionesAño2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNuevaFecha5"
        app:layout_constraintStart_toEndOf="@+id/opcionesMes2"
        app:layout_constraintTop_toTopOf="@+id/textViewNuevaFecha5"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/fechaActual2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="352dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listaGastos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.786" />

    <Button
        android:id="@+id/botonCambio"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="cambio"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNuevaFecha5"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevaFecha5"
        app:layout_constraintVertical_bias="0.484" />

    <ListView
        android:id="@+id/listaGastos"
        android:layout_width="213dp"
        android:layout_height="496dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonVolver2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="208dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/botonBorrar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/botonBorrar"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.266" />

    <Button
        android:id="@+id/botonBorrar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/Borrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fechaActual2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gastos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNuevaFecha5"
        app:layout_constraintVertical_bias="0.155" />

    <Spinner
        android:id="@+id/opcionesMes2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNuevaFecha5"
        app:layout_constraintStart_toEndOf="@+id/textViewNuevaFecha5"
        app:layout_constraintTop_toTopOf="@+id/textViewNuevaFecha5"
        app:layout_constraintVertical_bias="0.714"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/Modificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listaGastos"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

</androidx.constraintlayout.widget.ConstraintLayout>